# practising-C

./: CMakeLists.txt
src/: main.c
